Mudanças finais ao projeto
Adicionado projetos acadêmicos e mudanças básicas de layout.

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <span class="titulo d-inline-block">
                 Portfólio Nícolas Teixeira
                 <br>
-                <a href="#formacao" class="btn btn-info">Saiba mais</a>
+                <a href="#formacao" class="btn btn-info">Leia mais</a>
             </span>
         </div>
     </div>
@@ -76,18 +76,6 @@
                         <p>2015-2017</p>
                     </div>
                 </div>
-                <div class="row">
-                    <div class="col-sm-4">
-                        <p class="font-weight-bold">Colégio Estadual Jayme Canet</p>
-                    </div>
-                    <div class="col-sm-5">
-                        <p class="lead font-weight-bold">Ensino médio</p>
-                    </div>
-                    <div class="col-sm-3">
-                        <p class="lead">Formado</p>
-                        <p>2016</p>
-                    </div>
-                </div>
             </div><!-- Fim container -->
         </section> <!-- Fim do section formação -->
         <hr>
@@ -118,13 +106,12 @@
                 <h1 class="display-4">Projetos</h1>
                 <br><br>
                 <h3>Projetos pessoais</h3>
-                Clique na caixa para visualizar o source code direto em meu GitHub
                 <br><br>
                 <div class="row">
                     <div class="col-lg-4 col-responsivo">
                         <a class="card-link" href="https://github.com/nicolasteixeira3856/Projeto-UNES-Universidade">
                             <div class="card text-white bg-dark card-content">
-                                <img class="card-img-top" src="img/projeto1.jpg" alt="Card image cap">
+                                <img class="card-img-top" src="img/projeto1.jpg" alt="projeto pessoal UNES Universidade">
                                 <div class="card-body">
                                     <p class="card-text">
                                         UNES Universidade
@@ -137,7 +124,7 @@
                     <div class="col-lg-4 col-responsivo">
                         <a class="card-link" href="https://github.com/nicolasteixeira3856/Projeto-Anna-Bella">
                             <div class="card text-white bg-dark card-content">
-                                <img class="card-img-top" src="img/projeto2.jpg" alt="Card image cap">
+                                <img class="card-img-top" src="img/projeto2.jpg" alt="projeto pessoal modelo Anna Bella">
                                 <div class="card-body">
                                     <p class="card-text">
                                         Anna Bella
@@ -150,7 +137,7 @@
                     <div class="col-lg-4 col-responsivo">
                         <a class="card-link" href="https://github.com/nicolasteixeira3856/Projeto-TecBlog">
                             <div class="card text-white bg-dark card-content">
-                                <img class="card-img-top" src="img/projeto3.jpg" alt="Card image cap">
+                                <img class="card-img-top" src="img/projeto3.jpg" alt="projeto pessoal TecBlog">
                                 <div class="card-body">
                                     <p class="card-text">
                                         TecBlog
@@ -165,11 +152,11 @@
                 <div class="row">
                     <div class="col-lg-4">
                         <a class="card-link" href="https://github.com/nicolasteixeira3856/Projeto-NoticiasCidade">
-                            <div class="card text-white bg-dark card-content" style="width: 18rem; height: 100%;">
-                                <img class="card-img-top" src="img/projeto4.jpg" alt="Card image cap">
+                            <div class="card text-white bg-dark card-content">
+                                <img class="card-img-top" src="img/projeto4.jpg" alt="projeto pessoal NotíciasCidade">
                                 <div class="card-body">
                                     <p class="card-text">
-                                        NotíciasCidade
+                                        Notícias Cidade
                                         <p>Projeto para um site de notícias. <br> Tecnologias: HTML5/CSS3 avançado</p>
                                     </p>
                                 </div>
@@ -178,11 +165,11 @@
                     </div>
                     <div class="col-lg-4 col-responsivo">
                         <a class="card-link" href="https://github.com/nicolasteixeira3856/Projeto-ChaleHotel">
-                            <div class="card text-white bg-dark card-content" style="width: 18rem; height: 100%;">
-                                <img class="card-img-top" src="img/projeto5.jpg" alt="Card image cap">
+                            <div class="card text-white bg-dark card-content">
+                                <img class="card-img-top" src="img/projeto5.jpg" alt="projeto pessoal Chalé Hotel">
                                 <div class="card-body">
                                     <p class="card-text">
-                                        ChaléHotel
+                                        Chalé Hotel
                                         <p>Projeto para um site de hotel. <br> Tecnologias: HTML5/CSS3 avançado</p>
                                     </p>
                                 </div>
@@ -191,8 +178,8 @@
                     </div>
                     <div class="col-lg-4 col-responsivo">
                         <a class="card-link" href="https://github.com/nicolasteixeira3856/Projeto-MuseuNacional">
-                            <div class="card text-white bg-dark card-content" style="width: 18rem; height: 100%;">
-                                <img class="card-img-top" src="img/projeto6.jpg" alt="Card image cap">
+                            <div class="card text-white bg-dark card-content">
+                                <img class="card-img-top" src="img/projeto6.jpg" alt="projeto pessoal Museu Nacional">
                                 <div class="card-body">
                                     <p class="card-text">
                                         Museu Nacional
@@ -204,14 +191,37 @@
                     </div>
                 </div>
                 <br><br>
+                <h3>Projetos acadêmicos</h2>
+                Clique na caixa para visualizar em meu GitHub
+                <br><br>
+                <div class="row">
+                    <div class="col-lg-4">
+                        <a class="card-link" href="https://www.mecanicakustom.com.br">
+                            <div class="card text-white bg-dark card-content">
+                                <img class="card-img-top" src="img/projeto8.png" alt="projeto acadêmico pr-imoveisbeta" style="padding-top: 25px;">
+                                <div class="card-body">
+                                    <p class="card-text">
+                                        Pr-imóveisbeta
+                                        <p>Site/sistema web realizado para uma imobiliária fictícia durante o curso Técnico em Informática. <br> Tecnologias: Web: HTML5/CSS3 (Bootstrap/JQuery UI), JS(JQuery/JQuery UI/Materialize) PHP(PDO), AJAX e JSON. Mobile: JAVA (Android Studio), JSON e integração com a library Picasso. </p>
+                                    </p>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+                    <div class="col-lg-4">
+                    </div>
+                    <div class="col-lg-4">
+                    </div>
+                </div>
+                <br><br>
                 <h3>Projetos profissionais</h2>
                 Clique na caixa para visitar o(s) site(s) 
                 <br><br>
                 <div class="row">
                     <div class="col-lg-4">
                         <a class="card-link" href="https://www.mecanicakustom.com.br">
-                            <div class="card text-white bg-dark card-content" style="width: 18rem;">
-                                <img class="card-img-top" src="img/projeto7.jpg" alt="Card image cap">
+                            <div class="card text-white bg-dark card-content">
+                                <img class="card-img-top" src="img/projeto7.jpg" alt="projeto profissional mecanicakustom">
                                 <div class="card-body">
                                     <p class="card-text">
                                         Mecânica Kustom
