Mudanças finais ao projeto
Pequenas alterações de layout

--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
                 <br><br>
                 <div class="row">
                     <div class="col-lg-4">
-                        <a class="card-link" href="https://www.mecanicakustom.com.br">
+                        <a class="card-link" href="https://github.com/nicolasteixeira3856/pr-imoveisbeta-projetoSENAI">
                             <div class="card text-white bg-dark card-content">
                                 <img class="card-img-top" src="img/projeto8.png" alt="projeto acadêmico pr-imoveisbeta" style="padding-top: 25px;">
                                 <div class="card-body">
