Mudanças finais ao projeto
Adicionado seção de experiência

--- a/index.html
+++ b/index.html
@@ -34,6 +34,9 @@
                     <a class="nav-link text-info" href="#formacao">Formação</a>
                 </li>
                 <li class="nav-item">
+                    <a class="nav-link text-info" href="#experiencia">Experiência</a>
+                </li>
+                <li class="nav-item">
                     <a class="nav-link text-info" href="#cursos-certificados">Cursos/certificados</a>
                 </li>
                 <li class="nav-item">
@@ -54,7 +57,7 @@
                     <div class="col-sm-5">
                         <p class="lead font-weight-bold">Tecnologia em Análise e Desenvolvimento de Sistemas</p>
                         <p>Atividades:</p>
-                        <p><a href="https://github.com/nicolasteixeira3856" class="text-info">Visite também o meu github</a></p>
+                        <p><a target="_blank" href="https://github.com/nicolasteixeira3856" class="text-info">Visite também o meu github</a></p>
                     </div>
                     <div class="col-sm-3">
                         <p class="lead">Cursando</p>
@@ -68,12 +71,34 @@
                     <div class="col-sm-5">
                         <p class="lead font-weight-bold">Técnico em Informática</p>
                         <p>Atividades: Desenvolvimento web, desenvolvimento mobile, banco de dados (SQL, SGBDs: MySQL, Oracle), padrões de projeto, prototipação de projeto, qualidade de sistemas (testes de sistemas, versão alfa e beta) e modelagem de sistemas (Diagramação UML) </p>
-                        <p>Projeto de conclusão de curso: <a href="https://github.com/nicolasteixeira3856/pr-imoveisbeta-projetoSENAI" class="text-info">Pr-imoveisbeta</a></p>
-                        <p><a href="https://github.com/nicolasteixeira3856" class="text-info">Visite também o meu github</a></p>
+                        <p>Projeto de conclusão de curso: <a target="_blank" href="https://github.com/nicolasteixeira3856/pr-imoveisbeta-projetoSENAI" class="text-info">Pr-imoveisbeta</a></p>
+                        <p><a target="_blank" href="https://github.com/nicolasteixeira3856" class="text-info">Visite também o meu github</a></p>
                     </div>
                     <div class="col-sm-3">
                         <p class="lead">Formado</p>
                         <p>2015-2017</p>
+                    </div>
+                </div>
+            </div><!-- Fim container -->
+        </section> <!-- Fim do section formação -->
+        <hr>
+        <section id="experiencia"><!-- Inicio do section experiência -->
+            <div class="container"> <!-- Inicio container -->
+                <br><br>
+                <h1 class="display-4">Experiência</h1>
+                <br><br>
+                <div class="row">
+                    <div class="col-sm-4">
+                        <p class="font-weight-bold">Desenvolvedor web freelancer</p>
+                    </div>
+                    <div class="col-sm-5">
+                        <p class="lead">Tecnologias que utilizo: HTML, CSS [Bootstrap], PHP [Laravel], JavaScript [ES6], desenvolvimento mobile com Java, banco de dados (SQL, SGBDs: MySQL, Oracle).</p>
+                        <p class="lead font-weight-bold">Trabalhos:</p>
+                        <p><a target="_blank" href="https://www.mecanicakustom.com.br" class="text-info">Mecânica Kustom</a></p>
+                    </div>
+                    <div class="col-sm-3">
+                        <p class="lead">Freelancer</p>
+                        <p>Jan de 2019 - o momento</p>
                     </div>
                 </div>
             </div><!-- Fim container -->
@@ -90,7 +115,7 @@
                     </div>
                     <div class="col-sm-5">
                         <p>Conteúdo/atividades: HTML5, CSS3, Bootstrap 4 e design responsivo, JavaScript, JavaScript Moderno ECMAScript 2015 - ES6 e orientação a objetos, PHP7, PHP7 orientado a objetos, MySQL, Ajax, PHP com PDO e MySQL, publicação de aplicações web, JQuery, padrão de arquitetura MVC com PHP (utlizando Composer), API com Slim Framework, SASS, aplicações mobile com IONIC e Wordpress. </p>
-                        <p><a href="https://github.com/nicolasteixeira3856/Curso-DesenvolvimentoWebCompleto" class="text-info">Visite o repositório desse curso no meu github</a></p>
+                        <p><a target="_blank" href="https://github.com/nicolasteixeira3856/Curso-DesenvolvimentoWebCompleto" class="text-info">Visite o repositório desse curso no meu github</a></p>
                     </div>
                     <div class="col-sm-3">
                         <p class="lead">Cursando</p>
@@ -109,7 +134,7 @@
                 <br><br>
                 <div class="row">
                     <div class="col-lg-4 col-responsivo">
-                        <a class="card-link" href="https://github.com/nicolasteixeira3856/Projeto-UNES-Universidade">
+                        <a class="card-link" target="_blank" href="https://github.com/nicolasteixeira3856/Projeto-UNES-Universidade">
                             <div class="card text-white bg-dark card-content">
                                 <img class="card-img-top" src="img/projeto1.jpg" alt="projeto pessoal UNES Universidade">
                                 <div class="card-body">
@@ -122,7 +147,7 @@
                         </a>
                     </div>
                     <div class="col-lg-4 col-responsivo">
-                        <a class="card-link" href="https://github.com/nicolasteixeira3856/Projeto-Anna-Bella">
+                        <a class="card-link" target="_blank" href="https://github.com/nicolasteixeira3856/Projeto-Anna-Bella">
                             <div class="card text-white bg-dark card-content">
                                 <img class="card-img-top" src="img/projeto2.jpg" alt="projeto pessoal modelo Anna Bella">
                                 <div class="card-body">
@@ -135,7 +160,7 @@
                         </a>
                     </div>
                     <div class="col-lg-4 col-responsivo">
-                        <a class="card-link" href="https://github.com/nicolasteixeira3856/Projeto-TecBlog">
+                        <a class="card-link" target="_blank" href="https://github.com/nicolasteixeira3856/Projeto-TecBlog">
                             <div class="card text-white bg-dark card-content">
                                 <img class="card-img-top" src="img/projeto3.jpg" alt="projeto pessoal TecBlog">
                                 <div class="card-body">
@@ -151,7 +176,7 @@
                 <br>
                 <div class="row">
                     <div class="col-lg-4">
-                        <a class="card-link" href="https://github.com/nicolasteixeira3856/Projeto-NoticiasCidade">
+                        <a class="card-link" target="_blank" href="https://github.com/nicolasteixeira3856/Projeto-NoticiasCidade">
                             <div class="card text-white bg-dark card-content">
                                 <img class="card-img-top" src="img/projeto4.jpg" alt="projeto pessoal NotíciasCidade">
                                 <div class="card-body">
@@ -164,7 +189,7 @@
                         </a>
                     </div>
                     <div class="col-lg-4 col-responsivo">
-                        <a class="card-link" href="https://github.com/nicolasteixeira3856/Projeto-ChaleHotel">
+                        <a class="card-link" target="_blank" href="https://github.com/nicolasteixeira3856/Projeto-ChaleHotel">
                             <div class="card text-white bg-dark card-content">
                                 <img class="card-img-top" src="img/projeto5.jpg" alt="projeto pessoal Chalé Hotel">
                                 <div class="card-body">
@@ -177,7 +202,7 @@
                         </a>
                     </div>
                     <div class="col-lg-4 col-responsivo">
-                        <a class="card-link" href="https://github.com/nicolasteixeira3856/Projeto-MuseuNacional">
+                        <a class="card-link" target="_blank" href="https://github.com/nicolasteixeira3856/Projeto-MuseuNacional">
                             <div class="card text-white bg-dark card-content">
                                 <img class="card-img-top" src="img/projeto6.jpg" alt="projeto pessoal Museu Nacional">
                                 <div class="card-body">
@@ -196,7 +221,7 @@
                 <br><br>
                 <div class="row">
                     <div class="col-lg-4">
-                        <a class="card-link" href="https://github.com/nicolasteixeira3856/pr-imoveisbeta-projetoSENAI">
+                        <a class="card-link" target="_blank" href="https://github.com/nicolasteixeira3856/pr-imoveisbeta-projetoSENAI">
                             <div class="card text-white bg-dark card-content">
                                 <img class="card-img-top" src="img/projeto8.png" alt="projeto acadêmico pr-imoveisbeta" style="padding-top: 25px;">
                                 <div class="card-body">
@@ -219,7 +244,7 @@
                 <br><br>
                 <div class="row">
                     <div class="col-lg-4">
-                        <a class="card-link" href="https://www.mecanicakustom.com.br">
+                        <a class="card-link" target="_blank" href="https://www.mecanicakustom.com.br">
                             <div class="card text-white bg-dark card-content">
                                 <img class="card-img-top" src="img/projeto7.jpg" alt="projeto profissional mecanicakustom">
                                 <div class="card-body">
@@ -245,7 +270,7 @@
                     <br><br>
                     &copy; Nícolas Teixeira<br>
                     Contato: Celular 999409631 | <a class="text-info" href="mailto:nicolasteixeira3856@outlook.com">E-mail</a><br>
-                    <a class="text-info" href="https://github.com/nicolasteixeira3856">Github</a>&nbsp;&nbsp;<a class="text-info" href="https://www.linkedin.com/in/nícolas-teixeira-293446124/">LinkedIn</a>
+                    <a class="text-info" target="_blank" href="https://github.com/nicolasteixeira3856">Github</a>&nbsp;&nbsp;<a class="text-info" target="_blank" href="https://www.linkedin.com/in/nícolas-teixeira-293446124/">LinkedIn</a>
                     <br><br>
                 </div>
             </footer>
