--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/estilo.css">
 
+    <!--Font Awesome -->
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
+
     <title>Portfólio Nícolas Teixeira</title>
     <link rel="shortcut icon" type="image/x-icon" href="img/favicon.ico">
 
@@ -19,7 +22,7 @@
             <span class="titulo d-inline-block">
                 Portfólio Nícolas Teixeira
                 <br>
-                <a href="#formacao" class="btn btn-info">Leia mais</a>
+                <a href="#formacao" class="btn btn-info">Veja mais</a>
             </span>
         </div>
     </div>
@@ -131,6 +134,7 @@
                 <h1 class="display-4">Projetos</h1>
                 <br><br>
                 <h3>Projetos pessoais</h3>
+                <span>Clique na caixa para visualizar em meu GitHub</span>
                 <br><br>
                 <div class="row">
                     <div class="col-lg-4 col-responsivo">
@@ -215,9 +219,51 @@
                         </a>
                     </div>
                 </div>
+                <br>
+                <div class="row">
+                    <div class="col-lg-4">
+                        <a class="card-link" target="_blank" href="https://github.com/nicolasteixeira3856/Projeto-Finans">
+                            <div class="card text-white bg-dark card-content">
+                                <img class="card-img-top" src="img/projeto9.jpg" alt="projeto pessoal Finans">
+                                <div class="card-body">
+                                    <p class="card-text">
+                                        Finans
+                                        <p>Projeto para um site de finanças pessoais. <br> Tecnologias: HTML5, CSS3 e Bootstrap</p>
+                                    </p>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+                    <div class="col-lg-4 col-responsivo">
+                        <a class="card-link" target="_blank" href="https://github.com/nicolasteixeira3856/ProjetoClone-Spotify">
+                            <div class="card text-white bg-dark card-content">
+                                <img class="card-img-top" src="img/projeto10.jpg" alt="projeto Spotify">
+                                <div class="card-body">
+                                    <p class="card-text">
+                                        Clone Spotify
+                                        <p>Projeto de clone de layout da Index do Spotify. <br> Tecnologias: HTML5, CSS3 e Bootstrap</p>
+                                    </p>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+                    <div class="col-lg-4 col-responsivo">
+                        <a class="card-link" target="_blank" href="https://github.com/nicolasteixeira3856/Projeto-AppCalculadora">
+                            <div class="card text-white bg-dark card-content">
+                                <img class="card-img-top" src="img/projeto11.jpg" alt="projeto pessoal App Calculadora">
+                                <div class="card-body">
+                                    <p class="card-text">
+                                        App Calculadora
+                                        <p>Projeto de calculadora com operações básicas. <br> Tecnologias: HTML5, CSS3, Bootstrap e JavaScript</p>
+                                    </p>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+                </div>
                 <br><br>
                 <h3>Projetos acadêmicos</h2>
-                Clique na caixa para visualizar em meu GitHub
+                <span>Clique na caixa para visualizar em meu GitHub</span>
                 <br><br>
                 <div class="row">
                     <div class="col-lg-4">
@@ -240,7 +286,7 @@
                 </div>
                 <br><br>
                 <h3>Projetos profissionais</h2>
-                Clique na caixa para visitar o(s) site(s) 
+                <span>Clique na caixa para visitar o(s) site(s)</span>
                 <br><br>
                 <div class="row">
                     <div class="col-lg-4">
@@ -269,8 +315,10 @@
                 <div class="container">
                     <br><br>
                     &copy; Nícolas Teixeira<br>
-                    Contato: Celular 999409631 | <a class="text-info" href="mailto:nicolasteixeira3856@outlook.com">E-mail</a><br>
-                    <a class="text-info" target="_blank" href="https://github.com/nicolasteixeira3856">Github</a>&nbsp;&nbsp;<a class="text-info" target="_blank" href="https://www.linkedin.com/in/nícolas-teixeira-293446124/">LinkedIn</a>
+                    Contato:&nbsp;&nbsp;<span class="text-info"><i class="fas fa-phone"></i>&nbsp;999409631</span> &nbsp;|&nbsp; <a class="text-info" href="mailto:nicolasteixeira3856@outlook.com"><i class="fas fa-envelope"></i>&nbsp;E-mail</a> &nbsp;&nbsp;<br>
+                    &nbsp;<a class="text-info" target="_blank" href="https://github.com/nicolasteixeira3856"><i class="fab fa-github"></i>&nbsp;Github</a>
+                    &nbsp;|&nbsp;
+                    <a class="text-info" target="_blank" href="https://www.linkedin.com/in/nícolas-teixeira-293446124/"><i class="fab fa-linkedin-in"></i>&nbsp;LinkedIn</a>
                     <br><br>
                 </div>
             </footer>
