Adicionado a meta tag description

--- a/index.html
+++ b/index.html
@@ -4,6 +4,18 @@
     <!-- Meta tags -->
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta charset="utf-8">
+    <meta name="description" content="Site de Portfólio Nícolas Teixeira, entre e visualize meus projetos realizados nas mais variadas tecnologias web, seguindo padrões de projeto, normas de segurança e padrões de codificação.">
+
+    <!-- Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-136798251-1"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'UA-136798251-1');
+    </script>
+
 
     <!-- CSS - Bootstrap/Estilo pessoal -->
     <link rel="stylesheet" href="css/bootstrap.min.css">
