Pequenas mudanças na meta description

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <!-- Meta tags -->
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta charset="utf-8">
-    <meta name="description" content="Site de Portfólio Nícolas Teixeira, entre e visualize meus projetos realizados nas mais variadas tecnologias web, seguindo padrões de projeto, normas de segurança e padrões de codificação.">
+    <meta name="description" content="Site Portfólio do Nícolas Teixeira, entre e visualize meus projetos realizados nas mais variadas tecnologias web, seguindo padrões de projeto, normas de segurança e padrões de codificação.">
 
     <!-- Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-136798251-1"></script>
