Adicionando projeto appgamematamosquito
Adicionado projeto app game mata mosquito na sessão de projetos pessoais

--- a/index.html
+++ b/index.html
@@ -273,6 +273,22 @@
                         </a>
                     </div>
                 </div>
+                <br>
+                <div class="row">
+                    <div class="col-lg-4">
+                        <a class="card-link" target="_blank" href="https://github.com/nicolasteixeira3856/Projeto-AppGameMataMosquito">
+                            <div class="card text-white bg-dark card-content">
+                                <img class="card-img-top" src="img/projeto12.jpg" alt="projeto pessoal Finans">
+                                <div class="card-body">
+                                    <p class="card-text">
+                                        AppGame Mata Mosquito
+                                        <p>Projeto de um jogo mata mosquito. <br> Tecnologias: HTML5, CSS3, Bootstrap e JavaScript</p>
+                                    </p>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+                </div>
                 <br><br>
                 <h3>Projetos acadêmicos</h2>
                 <span>Clique na caixa para visualizar em meu GitHub</span>
