--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
                     <div class="col-lg-4 col-responsivo">
                         <a class="card-link" target="_blank" href="https://github.com/nicolasteixeira3856/ProjetoClone-Spotify">
                             <div class="card text-white bg-dark card-content">
-                                <img class="card-img-top" src="img/projeto10.jpg" alt="projeto Spotify">
+                                <img class="card-img-top" src="img/projeto10.jpg" alt="projeto pessoal Clone de layout Spotify">
                                 <div class="card-body">
                                     <p class="card-text">
                                         Clone Spotify
@@ -278,11 +278,24 @@
                     <div class="col-lg-4">
                         <a class="card-link" target="_blank" href="https://github.com/nicolasteixeira3856/Projeto-AppGameMataMosquito">
                             <div class="card text-white bg-dark card-content">
-                                <img class="card-img-top" src="img/projeto12.jpg" alt="projeto pessoal Finans">
+                                <img class="card-img-top" src="img/projeto12.jpg" alt="projeto pessoal app game mata mosquito">
                                 <div class="card-body">
                                     <p class="card-text">
                                         AppGame Mata Mosquito
                                         <p>Projeto de um jogo mata mosquito. <br> Tecnologias: HTML5, CSS3, Bootstrap e JavaScript</p>
+                                    </p>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+                    <div class="col-lg-4 col-responsivo">
+                        <a class="card-link" target="_blank" href="https://github.com/nicolasteixeira3856/Projeto-AppOrcamentoPessoal">
+                            <div class="card text-white bg-dark card-content">
+                                <img class="card-img-top" src="img/projeto13.jpg" alt="projeto pessoal app orçamento pessoal">
+                                <div class="card-body">
+                                    <p class="card-text">
+                                        App Orçamento Pessoal
+                                        <p>Projeto de um app de orçamento pessoal, com inserção de dados delete e filtragem em LocalStorage. <br> Tecnologias: HTML5, CSS3, Bootstrap e JavaScript (ECMAScript 6) [Extras: localStorage e Array Filter]</p>
                                     </p>
                                 </div>
                             </div>
