Alteraçòes a estruturação do contato no header

--- a/index.html
+++ b/index.html
@@ -356,7 +356,7 @@
                 <div class="container">
                     <br><br>
                     &copy; Nícolas Teixeira<br>
-                    Contato:&nbsp;&nbsp;<span class="text-info"><i class="fas fa-phone"></i>&nbsp;999409631</span> &nbsp;|&nbsp; <a class="text-info" href="mailto:nicolasteixeira3856@outlook.com"><i class="fas fa-envelope"></i>&nbsp;E-mail</a> &nbsp;&nbsp;<br>
+                    <span class="text-info"><i class="fas fa-phone"></i>&nbsp;999409631</span> &nbsp;|&nbsp; <a class="text-info" href="mailto:nicolasteixeira3856@outlook.com"><i class="fas fa-envelope"></i>&nbsp;E-mail</a> &nbsp;&nbsp;<br>
                     &nbsp;<a class="text-info" target="_blank" href="https://github.com/nicolasteixeira3856"><i class="fab fa-github"></i>&nbsp;Github</a>
                     &nbsp;|&nbsp;
                     <a class="text-info" target="_blank" href="https://www.linkedin.com/in/nícolas-teixeira-293446124/"><i class="fab fa-linkedin-in"></i>&nbsp;LinkedIn</a>
