--- a/index.html
+++ b/index.html
@@ -301,6 +301,19 @@
                             </div>
                         </a>
                     </div>
+                    <div class="col-lg-4 col-responsivo">
+                        <a class="card-link" target="_blank" href="https://github.com/nicolasteixeira3856/Projeto-AppOrcamentoPessoal">
+                            <div class="card text-white bg-dark card-content">
+                                <img class="card-img-top" src="img/projeto14.jpg" alt="projeto pessoal app orçamento pessoal">
+                                <div class="card-body">
+                                    <p class="card-text">
+                                        App Help Desk
+                                        <p>Projeto prático de desenvolvimento de um app que permita abertura de chamados de help desk utilizando PHP puro, básico/intermediário e estruturado.</p>
+                                    </p>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
                 </div>
                 <br><br>
                 <h3>Projetos acadêmicos</h2>
