Adicionado o projeto Send Mail

--- a/index.html
+++ b/index.html
@@ -308,7 +308,23 @@
                                 <div class="card-body">
                                     <p class="card-text">
                                         App Help Desk
-                                        <p>Projeto prático de desenvolvimento de um app que permita abertura de chamados de help desk utilizando PHP puro, básico/intermediário e estruturado.</p>
+                                        <p>Projeto prático de desenvolvimento de um app que permita abertura de chamados de help desk. <br> Tecnologias: HTML5, CSS(Bootstrap) e PHP7 básico/intermediário e estruturado.</p>
+                                    </p>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+                </div>
+                <br>
+                <div class="row">
+                    <div class="col-lg-4">
+                        <a class="card-link" target="_blank" href="https://github.com/nicolasteixeira3856/Projeto-SendMail">
+                            <div class="card text-white bg-dark card-content">
+                                <img class="card-img-top" src="img/projeto15.jpg" alt="projeto pessoal app game mata mosquito">
+                                <div class="card-body">
+                                    <p class="card-text">
+                                        App Send Mail
+                                        <p>Projeto prático de desenvolvimento de um app que permita o envio de e-mails para um destinatário. <br> Tecnologias: HTML5, CSS (Bootstrap) e PHP7 OO com library PHPMailer.</p>
                                     </p>
                                 </div>
                             </div>
