Adicionado o projeto DBLOJAVIRTUAL e Pesquisa endereço, mudanças no projeto profissional Mecânica Kustom.

--- a/index.html
+++ b/index.html
@@ -330,6 +330,32 @@
                             </div>
                         </a>
                     </div>
+                    <div class="col-lg-4 col-responsivo">
+                        <a class="card-link" target="_blank" href="https://github.com/nicolasteixeira3856/Projeto-DBLojaVirtual">
+                            <div class="card text-white bg-dark card-content">
+                                <img class="card-img-top" src="img/projeto16.jpg" alt="projeto pessoal app orçamento pessoal">
+                                <div class="card-body">
+                                    <p class="card-text">
+                                        Projeto DBLojaVirtual
+                                        <p>Projeto prático de um banco de dados para uma pequena loja virtual. <br> Tecnologias: SQL: [CREATE, INSERT, SELECT, PRIMARY KEY (PK) E FOREIGN KEY (FK), relacionamento de um para um, um para muitos, muitos para muitos e JOINS (LEFT JOIN, RIGHT JOIN, INNER JOIN)].</p>
+                                    </p>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+                    <div class="col-lg-4 col-responsivo">
+                        <a class="card-link" target="_blank" href="https://github.com/nicolasteixeira3856/Projeto-PesquisaEndereco">
+                            <div class="card text-white bg-dark card-content">
+                                <img class="card-img-top" src="img/projeto17.jpg" alt="projeto pessoal app orçamento pessoal">
+                                <div class="card-body">
+                                    <p class="card-text">
+                                        Projeto PesquisaEndereço
+                                        <p>PProjeto curto de pesquisa de CEP realizado para exemplificação do consumo de webservices. <br> Tecnologias: HTML5, CSS (Bootstrap) e JavaScript [XMLHttpRequest e JSON] <span class="text-warning">Webservice consumida: Viacep</span></p>
+                                    </p>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
                 </div>
                 <br><br>
                 <h3>Projetos acadêmicos</h2>
@@ -360,13 +386,14 @@
                 <br><br>
                 <div class="row">
                     <div class="col-lg-4">
-                        <a class="card-link" target="_blank" href="https://www.mecanicakustom.com.br">
+                        <a class="card-link" target="_blank" href="https://github.com/nicolasteixeira3856/Projeto-MecanicaKustom">
                             <div class="card text-white bg-dark card-content">
                                 <img class="card-img-top" src="img/projeto7.jpg" alt="projeto profissional mecanicakustom">
                                 <div class="card-body">
                                     <p class="card-text">
                                         Mecânica Kustom
                                         <p>Site profissional para uma mecânica de veículos em Curitiba.</p>
+                                        <span class="text-danger">Retirado do ar em Abril de 2019 por solicitação do cliente, upado em meu Github 26/04/2019 às 19:20 para fins de apresentação de portfólio. Antiga URL: https://www.mecanicakustom.com.br</span>
                                     </p>
                                 </div>
                             </div>
